# vbwd-plugin-tarot

./: README.md  __init__.py  admin-config.json  config.json  populate_db.py  pyproject.toml
.github/workflows/: tests.yml
locale/: en.json
migrations/: alembic.ini  env.py
migrations/versions/: 20260531_taro_arcana_prefix.py  20260625_rename_taro_to_tarot.py
src/: __init__.py  enums.py  events.py  handlers.py  routes.py
src/models/: __init__.py  arcana.py  taro_card_draw.py  tarot_card_draw.py  tarot_session.py
src/repositories/: __init__.py  arcana_repository.py  tarot_card_draw_repository.py  tarot_session_repository.py
src/services/: __init__.py  arcana_interpretation_service.py  taro_session_service.py  tarot_session_service.py
tests/: conftest.py
tests/integration/: README.md  conftest.py  test_access_level_seed.py  test_bot_round_trip.py  test_real_llm_language.py
tests/unit/: test_arcana_population.py  test_bot_consumer.py  test_table_naming.py  test_user_permissions.py
tests/unit/handlers/: test_tarot_event_handlers.py
tests/unit/models/: test_arcana.py  test_tarot_card_draw.py  test_tarot_session.py
tests/unit/repositories/: test_arcana_repository.py  test_tarot_card_draw_repository.py  test_tarot_session_repository.py
tests/unit/routes/: test_prompt_admin_routes.py  test_tarot_routes.py  test_tarot_routes.py.backup  test_tarot_routes_simple.py
tests/unit/services/: test_arcana_interpretation_service.py  test_core_llm_client_migration.py  test_free_reading.py  test_language_flow.py  (+4 more)
var/tarot/: user_access_levels.import.json
